--- a/templates/Index.html
+++ b/templates/Index.html
@@ -27,7 +27,7 @@
         <h2>NATURAL LANGUAGE PROCESSING APPLICATION</h2>
 
     </div>
-    <form action="{{ url_for('check')}}" method="POST" >
+    <form method="POST" >
             <h2>BBC News Article Classifier</h2>
             <h3>The application helps you classify the category of the Article</h3>
             <textarea id="article" name="article" rows="10" cols="100"></textarea>
